# MUGIWARA-

./: .gitignore  ANALYSIS_REPORT.md  LICENSE  README.md  fix_mugiwara.py  gradlew  settings.gradle.kts
.github/workflows/: android.yml  code-quality.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/analysis/: market_analyzer.cpp  market_analyzer.h
app/src/main/cpp/indicators/: bollinger_bands.cpp  bollinger_bands.h  macd.cpp  macd.h  moving_average.cpp  moving_average.h  rsi.cpp  rsi.h
app/src/main/cpp/utils/: performance.cpp  performance.h
app/src/main/java/com/mugiwara/: MugiwaraApplication.kt
app/src/main/java/com/mugiwara/data/local/: AccountDao.kt  MarketDao.kt  MugiwaraDatabase.kt  SettingsDao.kt  SignalDao.kt  TradeDao.kt
app/src/main/java/com/mugiwara/data/mapper/: AccountMapper.kt  (+4 more)
app/src/main/java/com/mugiwara/di/: AppModule.kt  DatabaseModule.kt  Mt5Module.kt  NetworkModule.kt  WorkManagerModule.kt
app/src/main/java/com/mugiwara/service/: AppNotificationManager.kt  BootReceiver.kt  MarketAnalysisService.kt  MarketHoursManager.kt  NotificationManager.kt  TradingService.kt
app/src/main/java/com/mugiwara/utils/: Constants.kt  Extensions.kt  NativeUtils.kt  NetworkUtils.kt  PerformanceMonitor.kt  Result.kt  UiState.kt
app/src/main/java/com/mugiwara/worker/: MarketAnalysisWorker.kt  TradeExecutionWorker.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+93 files in other folders)
